@@ -1,9 +1,18 @@
 contfrac(1,[],-1)
+contfracpnqn(Vecsmall([]))
+contfracpnqn([])
+contfracpnqn([],0)
+contfracpnqn([],1)
+contfracpnqn([2])
+contfracpnqn([2],0)
+contfracpnqn([2],1)
 v=[1,2,3];
 contfracpnqn(v)
 contfracpnqn(v,0)
+contfracpnqn(v,1)
 contfracpnqn(v,2)
 v=[1,2,3;4,5,6];
 contfracpnqn(v)
 contfracpnqn(v,0)
+contfracpnqn(v,1)
 contfracpnqn(v,2)
